[gd_scene load_steps=7 format=3 uid="uid://fxpyk00ddfbh"]

[ext_resource type="Theme" uid="uid://bdeo7pu4bmfqy" path="res://Themes/KolacheTheme.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://cwnvls12bwq24" path="res://play_pause_icon.png" id="7"]
[ext_resource type="Script" path="res://TimerProgramParts/TimerBox.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://bil3spljv0ngj" path="res://white_box.jpg" id="10"]
[ext_resource type="StyleBox" path="res://Themes/PlayPause.tres" id="11"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_68flr"]

[node name="TimerBox" type="Panel" groups=["timer_boxes"]]
custom_minimum_size = Vector2(560, 150)
offset_right = 500.0
offset_bottom = 150.0
theme = ExtResource("6")
script = ExtResource("9")

[node name="Timer" type="Timer" parent="."]
wait_time = 3600.0
one_shot = true

[node name="NormalDisplay" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 5.0
offset_right = -9.0
offset_bottom = -7.0

[node name="HBoxContainer" type="HBoxContainer" parent="NormalDisplay"]
layout_mode = 2

[node name="TimerTitle" type="LineEdit" parent="NormalDisplay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6")
placeholder_text = "Enter Timer Title"

[node name="MenuButton" type="MenuButton" parent="NormalDisplay/HBoxContainer"]
layout_mode = 2
text = "X"
item_count = 1
popup/item_0/text = "Delete?"
popup/item_0/id = 0

[node name="TimeContainer" type="HBoxContainer" parent="NormalDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayPause" type="Button" parent="NormalDisplay/TimeContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("6")
theme_override_styles/pressed = ExtResource("11")
toggle_mode = true
icon = ExtResource("7")

[node name="Panel" type="Panel" parent="NormalDisplay/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Detail" type="ColorRect" parent="NormalDisplay/TimeContainer/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = -2.0
color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="Progress" type="TextureProgressBar" parent="NormalDisplay/TimeContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.253)
nine_patch_stretch = true
texture_progress = ExtResource("10")

[node name="HBoxContainer" type="HBoxContainer" parent="NormalDisplay/TimeContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -17.0
offset_right = 43.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1
alignment = 1

[node name="GreyedOut" type="Label" parent="NormalDisplay/TimeContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_68flr")
text = "00:00:00"

[node name="NumberDisplay" type="Label" parent="NormalDisplay/TimeContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureButton" type="TextureButton" parent="NormalDisplay/TimeContainer/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ControlContainer" type="HBoxContainer" parent="NormalDisplay"]
layout_mode = 2

[node name="LocationButton" type="Button" parent="NormalDisplay/ControlContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6")
text = "Location >"

[node name="AlarmButton" type="MenuButton" parent="NormalDisplay/ControlContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme = ExtResource("6")
text = "Alarm >"

[node name="AlarmDisplay" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
color = Color(0.807843, 0.188235, 0.188235, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="AlarmDisplay"]
clip_contents = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("6")
bbcode_enabled = true
text = "Error! the text Has not been set propperly! 
(or it's not propperly hidden)"

[node name="AlarmSwitchTime" type="Timer" parent="AlarmDisplay"]
wait_time = 0.5

[node name="AlarmStop" type="TextureButton" parent="AlarmDisplay" groups=["timer_boxes"]]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_submitted" from="NormalDisplay/HBoxContainer/TimerTitle" to="." method="_on_TimerTitle_text_entered"]
[connection signal="toggled" from="NormalDisplay/TimeContainer/PlayPause" to="." method="_on_PlayPause_toggled"]
[connection signal="pressed" from="NormalDisplay/TimeContainer/Panel/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="AlarmDisplay/AlarmSwitchTime" to="." method="_on_AlarmSwitchTime_timeout"]
[connection signal="pressed" from="AlarmDisplay/AlarmStop" to="." method="_on_AlarmStop_pressed"]
